nodeJsApplication/mongo.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: mongo 
spec:
  selector:
    matchLabels:
      app: mongo
  replicas: 1
  template: 
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo 
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: vol 
              mountPath: /data/db
          resources:
            limits:
              cpu: "900m"
              memory: "900Mi"
      volumes: 
       - name: vol 
         persistentVolumeClaim:
          claimName: snote
