nodeJsApplication/NetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: appsec
spec:
  podSelector:
    matchLabels:
      app: mongo
  policyTypes:
    - Ingress 
    
  ingress:
    - from: 
        - podSelector:
            matchLabels:
              app: snote
      ports:
        - protocol: TCP
          port: 27017
